--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 anyhow = "1.0.98"
 async-lock = "3.4.0"
 async-std = { version = "1.13.1", features = ["attributes"] }
+chrono = "0.4.41"
 clap = { version = "4.5.38", features = ["derive"] }
 git2 = "0.20.2"
